--- a/app/views/admin/seminars/form/_general.html.slim
+++ b/app/views/admin/seminars/form/_general.html.slim
@@ -2,6 +2,7 @@
   .col-md-3 = f.input :archived
   .col-md-3 = f.input :canceled
   .col-md-2 = f.input :year, collection: Catalog.pluck(:year).sort, include_blank: false
+  .col-md-4 = f.input :pre_booking_weeks, include_blank: false
 .row
   .col-md-6 = f.association :editor, label_method: :name, collection: User.editors, input_html: { class: 'select2' }
   .col-md-6 = f.input :number
