--- a/app/views/buchung/_form.html.slim
+++ b/app/views/buchung/_form.html.slim
@@ -97,6 +97,10 @@ coffee:
 sass:
   a.add-attendee
     margin-bottom: 25px
+  a.remove-attendee
+    position: absolute
+    right: -20px
+    display: none
+  .attendee:hover
     a.remove-attendee
-      position: absolute
-      right: -20px
+      display: inline
