reduction information on extra page

--- a/app/views/admin/attendees/_form.html.slim
+++ b/app/views/admin/attendees/_form.html.slim
@@ -60,7 +60,7 @@
             .row
               .col-md-6 = f.input :tandem_name, label: 'Name, Vorname'
               .col-md-6 = f.input :tandem_company, label: 'Einrichtung'
-            = f.input :tandem_address, label: 'Name und Anschrift der Trägers der Einrichting'
+            = f.input :tandem_address, label: 'Name und Anschrift der Trägers der Einrichtung'
         span.radio
           label
             => f.radio_button :reduction, :pari
