new titles and validations for bookings

--- a/app/views/buchung/_form_reductions.html.slim
+++ b/app/views/buchung/_form_reductions.html.slim
@@ -20,34 +20,27 @@
           .col-md-1 = link_to fa_icon('plus', text: 'Teilnehmer hinzufügen'), '#',
             class: 'add-attendee btn btn-default', tabindex: -1, title: 'Neuer Teilnehmer'
       fieldset
-        legend Arbeitgeber
+        legend Schicken Sie die Rechnung bitte an folgende Adresse:
+        p
+          label.radio-inline
+            input type="radio" name="booking[is_company]" value='false' checked=(!@booking.is_company) Privatadresse
+          label.radio-inline
+            input type="radio" name="booking[is_company]" value='true' checked=(@booking.is_company) Arbeitgeber
+        .row.company_title
+          .col-md-12 = f.input :invoice_title
         .row
-          .col-md-6 = f.input :company_title
-        .row
-          .col-md-5 = f.input :company_street
-          .col-md-2 = f.input :company_zip,  as: :tel
-          .col-md-5 = f.input :company_city
+          .col-md-5 = f.input :invoice_street
+          .col-md-2 = f.input :invoice_zip,  as: :tel
+          .col-md-5 = f.input :invoice_city
 
       fieldset
-        legend Kontakt
+        legend Bitte geben Sie für eventuelle kurzfristige Absagen einen Kontakt an, unter dem Sie erreichbar sind:
         .row
-          .col-md-6 = f.input :contact_email,  as: :email, placeholder: '* E-Mail-Adresse'
-          .col-md-6 = f.input :contact_phone,  as: :tel,   placeholder: '* Telefon'
-          .col-md-6 = f.input :contact_fax,    as: :tel
-          .col-md-6 = f.input :contact_mobile, as: :tel
+          .col-md-6 = f.input :contact_phone,  as: :tel,   placeholder: '* Telefon/Mobil'
+          .col-md-6 = f.input :contact_email,  as: :email, placeholder: '* E-Mail'
 
       fieldset
-        legend = Booking.human_attribute_name(:invoice_address)
-        .row
-          .col-md-6 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
-          .col-md-6
-            = f.input :invoice_street
-            .row
-              .col-md-4 = f.input :invoice_zip,  as: :tel
-              .col-md-8 = f.input :invoice_city
-
-      fieldset
-        legend Ich möchte folgenden Rabatt in Anspruch nehmen
+        legend Ich möchte folgenden Rabatt in Anspruch nehmen:
         small Es kann nur ein Rabatt pro Teilnehmer*in in Anspruch genommen werden.
         br
         small Weitere Informationen zu unseren Rabatten finden Sie im Bildungskalender 2019 auf Seite 12
@@ -59,35 +52,37 @@
               span.radio
                 label
                   => f.radio_button :reduction, :early, disabled: (Date.current > @seminar.date - @seminar.pre_booking_weeks.weeks)
-                  | 10% Frühbucher*innen-Rabatt (#{@seminar.pre_booking_weeks} Wochen im Vorraus)
+                  | 10% Frühbucher*innen-Rabatt (#{@seminar.pre_booking_weeks} Wochen im Voraus)
             span.radio
               label
                 => f.radio_button :reduction, :tandem
                 | 10% Tandem-Rabatt (nur für Kurse)
-              .reduction-content
-                .row
-                  .col-md-6 = f.input :tandem_name, label: 'Name, Vorname'
-                  .col-md-6 = f.input :tandem_company, label: 'Einrichtung'
-                = f.input :tandem_address, label: 'Name und Anschrift der Trägers der Einrichtung'
-                p Diese Person muss sich eigenständig anmelden.
+            .reduction-content
+              p: small Ich nehme den Rabatt gemeinsam mit folgender Person in Anspruch: (Diese Person muss sich eigenständig anmelden.)
+              .row
+                .col-md-6 = f.input :tandem_name, placeholder: 'Name, Vorname'
+                .col-md-6 = f.input :tandem_company, placeholder: 'Einrichtung'
+              = f.input :tandem_address, placeholder: 'Bitte geben Sie Name und Anschrift des Trägers der Einrichtungen an',
+                  hint: 'Angabe zur Einlösung des Rabatts notwendig'
             span.radio
               label
                 => f.radio_button :reduction, :pari
                 | 5% PARITÄTER-Rabatt (nur für Kurse)
-              .row.reduction-content
-                .col-md-6 = f.input :member, label: t('buchung.new.member')
-                .col-md-6 = f.input :member_institution, label: t('buchung.new.member_institution')
+            .row.reduction-content
+              .col-md-6 = f.input :member, label: t('buchung.new.member')
+              .col-md-6 = f.input :member_institution, label: t('buchung.new.member_institution')
             span.radio
               label
                 => f.radio_button :reduction, :group, disabled: true
                 | 10% Gruppen-Rabatt (ab 5 Personen)
+            .reduction-content Ich melde für die o.g. Veranstaltung gleichzeitig o.g. Personen aus meiner Einrichtung an.
             span.radio
               label
                 => f.radio_button :reduction, :school
-                | 20% Rabatt für Absolvent*innen der PARITÄTISCHEN Fachschulen für Sozialwesen in Drübeck und Aschersleben
-              .row.reduction-content
-                .col-md-6 = f.input :school, collection: t('bookings.schools'), include_blank: false
-                .col-md-6 = f.input :year
+                | 20% Rabatt für Absolvent*innen der PARITÄTISCHEN Fachschulen für Sozialwesen
+            .row.reduction-content
+              .col-md-6 = f.input :school, collection: t('bookings.schools'), include_blank: false
+              .col-md-6 = f.input :year, placeholder: 'Abschlussjahr'
 
       fieldset
         legend Bemerkungen
@@ -103,6 +98,14 @@
 
 coffee:
   $ ->
+    $('form#new_booking').submit ->
+      $('span.radio:not(.selected) + .reduction-content').find('input, select').prop('disabled', true)
+      true
+
+    $('input[name="booking[is_company]"]').change ->
+      $('.company_title').toggle $('input[name="booking[is_company]"]:checked').val() == 'true'
+    $('input[name="booking[is_company]"]').change()
+
     toggleAttendee = (attendee, hidden) ->
       attendee.toggleClass('hidden', hidden)
       attendee.find('.booking_attendees__destroy input').val(hidden)
@@ -131,9 +134,12 @@ coffee:
     reduction = $('[name="booking[reduction]"]')
     reduction.change (event) ->
       $('span.radio').removeClass('selected')
-      $(event.target).parentsUntil('span.radio').parent().addClass('selected')
+      $('[name="booking[reduction]"]:checked').parentsUntil('span.radio').parent().addClass('selected')
+    reduction.change()
 
 sass:
+  fieldset
+    margin-bottom: 20px
   a.add-attendee
     margin-bottom: 25px
   a.remove-attendee
@@ -146,7 +152,9 @@ sass:
       display: inline
   .reduction-content
     display: none
-    margin: 10px 0 30px 20px
+    margin-left: 20px
   span.radio.selected
-    .reduction-content
+    & > label
+      font-weight: bold
+    & + .reduction-content
       display: block
